--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -2,9 +2,12 @@
   "workbench.colorTheme": "Dracula",
   "workbench.iconTheme": "material-icon-theme",
   "python.defaultInterpreterPath": "/bin/python",
-  "editor.formatOnSave": true,
   "editor.rulers": [80],
   "editor.wordWrap": "bounded",
+  "editor.formatOnType": true,
+  "editor.fontSize": 18,
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": false,
   "[docker]": {
     "editor.defaultFormatter": "ms-azuretools.vscode-docker"
   },
@@ -59,8 +62,5 @@
   "[yaml]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "redhat.telemetry.enabled": false,
-  "editor.formatOnPaste": true,
-  "editor.formatOnType": true,
-  "editor.fontSize": 16
+  "redhat.telemetry.enabled": false
 }
